Table Techniciens {
  ID int [primary key, unique, increment]
  Nom varchar(255)
}

Table Utilisateurs {
  ID int [primary key, unique, increment]
  Nom varchar(255)
  Droit varchar(255)
}

Table Maintenances {
  ID int [primary key, unique, increment]
  DateDebut date
  DateFin date
  Actions varchar(255)
  TechnicienID int [ref: > Techniciens.ID]
}

Table Machines {
  ID int [primary key, unique, increment]
  DateAchat date
  TailleDisque varchar(255)
  RAM varchar(255)
  UtilisateurID int [ref: > Utilisateurs.ID]
  MaintenanceID int [ref: > Maintenances.ID]
  MarquesID int [ref: > Marques.ID]
}

Table Logiciels {
  ID int [primary key, unique, increment]
  Nom varchar(255)
  Version varchar(255)
  Licence varchar(255)
  MachineID int [ref: > Machines.ID]
}

Table Marques {
  ID int [primary key, unique, increment]
  Marques varchar(255)
}
